@@ -1,5 +1,6 @@
 package com.mtech.restaurant.manual;
 
+import static org.junit.jupiter.api.Assertions.assertNotNull;
 
 import com.mtech.restaurant.domain.RestaurantCreateUpdateRequest;
 import com.mtech.restaurant.domain.entities.Address;
@@ -9,6 +10,14 @@ import com.mtech.restaurant.domain.entities.TimeRange;
 import com.mtech.restaurant.services.PhotoService;
 import com.mtech.restaurant.services.RestaurantService;
 import com.mtech.restaurant.services.impl.RandomLondonGeoLocationService;
+import jakarta.validation.ConstraintViolation;
+import jakarta.validation.ConstraintViolationException;
+import jakarta.validation.Validator;
+import java.io.IOException;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Set;
+import org.junit.jupiter.api.Tag;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -19,10 +28,7 @@ import org.springframework.mock.web.MockMultipartFile;
 import org.springframework.test.annotation.Rollback;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.util.Arrays;
-import java.util.List;
-
+@Tag("manual")
 @SpringBootTest
 public class RestaurantDataLoaderTest {
 
@@ -38,31 +44,44 @@ public class RestaurantDataLoaderTest {
     @Autowired
     private ResourceLoader resourceLoader;
 
+    @Autowired
+    private Validator validator;
+
     @Test
-    @Rollback(false) // Allow changes to persist
+    @Rollback(false)
     public void createSampleRestaurants() throws Exception {
         List<RestaurantCreateUpdateRequest> restaurants = createRestaurantData();
         restaurants.forEach(restaurant -> {
-            String fileName = restaurant.getPhotoIds().getFirst();
+            String fileName = restaurant.getPhotoIds().get(0); // Get first photo ID
             Resource resource = resourceLoader.getResource("classpath:testdata/" + fileName);
+
             MultipartFile multipartFile = null;
             try {
                 multipartFile = new MockMultipartFile(
                         "file", // parameter name
                         fileName, // original filename
                         MediaType.IMAGE_PNG_VALUE,
-                        resource.getInputStream()
-                );
+                        resource.getInputStream());
             } catch (IOException e) {
-                throw new RuntimeException(e);
+                System.err.println("Error loading file: " + fileName);
+                e.printStackTrace();
+                throw new RuntimeException("Failed to load image: " + fileName, e);
             }
 
+            // Validate restaurant data
+            Set<ConstraintViolation<RestaurantCreateUpdateRequest>> violations = validator.validate(restaurant);
+            if (!violations.isEmpty()) {
+                throw new ConstraintViolationException(violations);
+            }
 
-            // Call the service method
+            // Upload the photo
             Photo uploadedPhoto = photoService.uploadPhoto(multipartFile);
+            assertNotNull(uploadedPhoto, "Photo should be uploaded successfully");
 
+            // Set the uploaded photo URL in the restaurant request
             restaurant.setPhotoIds(List.of(uploadedPhoto.getUrl()));
 
+            // Create the restaurant
             restaurantService.createRestaurant(restaurant);
 
             System.out.println("Created restaurant: " + restaurant.getName());
@@ -75,83 +94,93 @@ public class RestaurantDataLoaderTest {
                         "The Golden Dragon",
                         "Chinese",
                         "+44 20 7123 4567",
-                        createAddress("12", "Gerrard Street", null, "London", "Greater London", "W1D 5PR", "United Kingdom"),
+                        createAddress(
+                                "12", "Gerrard Street", null, "London", "Greater London", "W1D 5PR", "United Kingdom"),
                         createStandardOperatingHours("11:30", "23:00", "11:30", "23:30"),
-                        "golden-dragon.png"
-                ),
+                        "golden-dragon.png"),
                 createRestaurant(
                         "La Petite Maison",
                         "French",
                         "+44 20 7234 5678",
-                        createAddress("54", "Brook Street", null, "London", "Greater London", "W1K 4HR", "United Kingdom"),
+                        createAddress(
+                                "54", "Brook Street", null, "London", "Greater London", "W1K 4HR", "United Kingdom"),
                         createStandardOperatingHours("12:00", "22:30", "12:00", "23:00"),
-                        "la-petit-maison.png"
-                ),
+                        "la-petit-maison.png"),
                 createRestaurant(
                         "Raj Pavilion",
                         "Indian",
                         "+44 20 7345 6789",
                         createAddress("27", "Brick Lane", null, "London", "Greater London", "E1 6PU", "United Kingdom"),
                         createStandardOperatingHours("12:00", "23:00", "12:00", "23:30"),
-                        "raj-pavilion.png"
-                ),
+                        "raj-pavilion.png"),
                 createRestaurant(
                         "Sushi Master",
                         "Japanese",
                         "+44 20 7456 7890",
-                        createAddress("8", "Poland Street", null, "London", "Greater London", "W1F 8PR", "United Kingdom"),
+                        createAddress(
+                                "8", "Poland Street", null, "London", "Greater London", "W1F 8PR", "United Kingdom"),
                         createStandardOperatingHours("11:30", "22:00", "11:30", "22:30"),
-                        "sushi-master.png"
-                ),
+                        "sushi-master.png"),
                 createRestaurant(
                         "The Rustic Olive",
                         "Italian",
                         "+44 20 7567 8901",
-                        createAddress("92", "Dean Street", null, "London", "Greater London", "W1D 3SR", "United Kingdom"),
+                        createAddress(
+                                "92", "Dean Street", null, "London", "Greater London", "W1D 3SR", "United Kingdom"),
                         createStandardOperatingHours("11:00", "23:00", "11:00", "23:30"),
-                        "rustic-olive.png"
-                ),
+                        "rustic-olive.png"),
                 createRestaurant(
                         "El Toro",
                         "Spanish",
                         "+44 20 7678 9012",
-                        createAddress("15", "Charlotte Street", null, "London", "Greater London", "W1T 1RH", "United Kingdom"),
+                        createAddress(
+                                "15",
+                                "Charlotte Street",
+                                null,
+                                "London",
+                                "Greater London",
+                                "W1T 1RH",
+                                "United Kingdom"),
                         createStandardOperatingHours("12:00", "23:00", "12:00", "23:30"),
-                        "el-toro.png"
-                ),
+                        "el-toro.png"),
                 createRestaurant(
                         "The Greek House",
                         "Greek",
                         "+44 20 7789 0123",
-                        createAddress("32", "Store Street", null, "London", "Greater London", "WC1E 7BS", "United Kingdom"),
+                        createAddress(
+                                "32", "Store Street", null, "London", "Greater London", "WC1E 7BS", "United Kingdom"),
                         createStandardOperatingHours("12:00", "22:30", "12:00", "23:00"),
-                        "greek-house.png"
-                ),
+                        "greek-house.png"),
                 createRestaurant(
                         "Seoul Kitchen",
                         "Korean",
                         "+44 20 7890 1234",
-                        createAddress("71", "St John Street", null, "London", "Greater London", "EC1M 4AN", "United Kingdom"),
+                        createAddress(
+                                "71", "St John Street", null, "London", "Greater London", "EC1M 4AN", "United Kingdom"),
                         createStandardOperatingHours("11:30", "22:00", "11:30", "22:30"),
-                        "seoul-kitchen.png"
-                ),
+                        "seoul-kitchen.png"),
                 createRestaurant(
                         "Thai Orchid",
                         "Thai",
                         "+44 20 7901 2345",
-                        createAddress("45", "Warren Street", null, "London", "Greater London", "W1T 6AD", "United Kingdom"),
+                        createAddress(
+                                "45", "Warren Street", null, "London", "Greater London", "W1T 6AD", "United Kingdom"),
                         createStandardOperatingHours("11:00", "22:30", "11:00", "23:00"),
-                        "thai-orchid.png"
-                ),
+                        "thai-orchid.png"),
                 createRestaurant(
                         "The Burger Joint",
                         "American",
                         "+44 20 7012 3456",
-                        createAddress("88", "Commercial Street", null, "London", "Greater London", "E1 6LY", "United Kingdom"),
+                        createAddress(
+                                "88",
+                                "Commercial Street",
+                                null,
+                                "London",
+                                "Greater London",
+                                "E1 6LY",
+                                "United Kingdom"),
                         createStandardOperatingHours("11:00", "23:00", "11:00", "23:30"),
-                        "burger-joint.png"
-                )
-        );
+                        "burger-joint.png"));
     }
 
     private RestaurantCreateUpdateRequest createRestaurant(
@@ -160,8 +189,7 @@ public class RestaurantDataLoaderTest {
             String contactInformation,
             Address address,
             OperatingHours operatingHours,
-            String photoId
-    ) {
+            String photoId) {
         return RestaurantCreateUpdateRequest.builder()
                 .name(name)
                 .cuisineType(cuisineType)
@@ -179,8 +207,7 @@ public class RestaurantDataLoaderTest {
             String city,
             String state,
             String postalCode,
-            String country
-    ) {
+            String country) {
         Address address = new Address();
         address.setStreetNumber(streetNumber);
         address.setStreetName(streetName);
@@ -193,11 +220,7 @@ public class RestaurantDataLoaderTest {
     }
 
     private OperatingHours createStandardOperatingHours(
-            String weekdayOpen,
-            String weekdayClose,
-            String weekendOpen,
-            String weekendClose
-    ) {
+            String weekdayOpen, String weekdayClose, String weekendOpen, String weekendClose) {
         TimeRange weekday = new TimeRange();
         weekday.setOpenTime(weekdayOpen);
         weekday.setCloseTime(weekdayClose);
